--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       h1 {
         font-size: 2em;
       }
+      .Sign-Up-Button {
+        border: 10px solid black;
+      }
     </style>
   </head>
   <body>
@@ -60,59 +63,25 @@
     <nav>
       <ul>
         <!-- NEED TO UPDATE THIS AFTER THE WEBSITE IS COMPLETED -->
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="https://www.meta.com">menu</a></li>
         <li><a href="https://www.meta.com">about us</a></li>
         <li><a href="https://www.meta.com">contact us</a></li>
       </ul>
     </nav>
     <main>
-      <h2>Sign Up</h2>
-      <form>
-        <div>
-          <label for="user-first-name">First Name</label>
-          <input
-            type="text"
-            id="user-first-name"
-            class="form-item user-name user-first-name"
-          />
-        </div>
-        <div>
-          <label for="user-last-name">Last Name</label>
-          <input
-            type="text"
-            id="user-last-name"
-            class="form-item user-name user-last-name"
-          />
-        </div>
-        <div>
-          <label for="user-email">Email</label>
-          <input type="email" id="user-email" class="form-item user-email" />
-        </div>
-        <div>
-          <label for="user-password">Password</label>
-          <input
-            type="password"
-            id="user-password"
-            class="form-item user-password"
-          />
-        </div>
-        <div>
-          <label for="user-confirm-password">Confirm Password</label>
-          <input
-            type="password"
-            id="user-confirm-password"
-            class="form-item user-password"
-          />
-        </div>
-        <div>
-          <label for="user-submit-button">Submit</label>
-          <input
-            type="submit"
-            id="user-submit-button"
-            class="form-item user-submit"
-          />
-        </div>
-      </form>
+      <h2>Main Page</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus
+        expedita mollitia maxime nesciunt! Cupiditate magni, pariatur maiores,
+        quae assumenda quam provident id fuga deleniti explicabo illo eius
+        facilis vitae, placeat perferendis error ipsum in soluta possimus?
+        Soluta, dolorem, eius, quisquam omnis asperiores laborum porro corporis
+        voluptates fuga rerum assumenda architecto?
+      </p>
+
+      <div class="Sign-Up-button button">
+        <a href="./signup.html">Sign Up</a>
+      </div>
     </main>
     <footer>
       <p>Come visit us on thursdays for special discount.</p>
